# pydwca

./: .gitattributes  .gitignore  .readthedocs.yaml  README.md  pyproject.toml  requirements-test.txt  requirements.txt
.github/: workflows
.github/workflows/: publish-pypi.yml  test-files-names.txt  test.yml
docs/source/: conf.py  dwca.base.rst  dwca.classes.rst  dwca.metadata.rst  dwca.rst  dwca.terms.rst  dwca.utils.rst  dwca.xml.rst  eml.base.rst  eml.citation.rst  eml.dataset.rst  eml.protocol.rst  eml.resources.coverage.rst  eml.resources.distribution.rst  eml.resources.rst  eml.rst  eml.software.rst  eml.types.rst  index.rst  install.rst  modules.rst  requirements.txt  usage.dwca.rst  usage.eml.rst  usage.rst  xml_common.rst  xml_common.utils.rst
src/dwca/: __init__.py  example.py
src/dwca/base/: __init__.py  darwincore.py  darwincore_archive.py  darwincorearchive.py  simple_darwincore.py
src/dwca/classes/: __init__.py  chronometric_age.py  data_file.py  distribution.py  event.py  geological_context.py  identification.py  location.py  material_entity.py  material_sample.py  measurement_or_fact.py  occurrence.py  organism.py  outside_class.py  resource_relationship.py  species_profile.py  taxon.py
src/dwca/metadata/: __init__.py  core.py  data_file.py  extension.py  field.py  meta.py
src/dwca/terms/: __init__.py  chronometric_age.py  distribution.py  event.py  field.py  geological_context.py  identification.py  location.py  material_entity.py  material_sample.py  measurement_or_fact.py  occurrence.py  organism.py  outside_term.py  record_level.py  resource_relationship.py  species_profile.py  taxon.py
src/dwca/utils/: __init__.py  enum.py  establishment_means.py  language.py  length_unit.py
src/dwca/xml/: __init__.py  xml_object.py
src/eml/: __init__.py
src/eml/base/: __init__.py  eml.py  metadata.py  version.py
src/eml/citation/: __init__.py  citation.py
src/eml/dataset/: __init__.py  dataset.py
src/eml/protocol/: __init__.py  protocol.py
src/eml/resources/: __init__.py  citation.py  dataset.py  keyword_set.py  licence.py  protocol.py  resource.py  resources.py  software.py
src/eml/software/: __init__.py  software.py
src/eml/types/: __init__.py  access_type.py  address.py  change_history.py  eml_object.py  extension_string.py  extension_uri.py  i18n_string.py  phone.py  (+13 more)
src/xml_common/: __init__.py  xml_object.py
tests/example_data/: eml.xml  identification.txt  identifier.txt  meta.xml  reference.txt  speciesprofile.txt  taxon.txt
tests/test_dwca/: test_dwca.py  test_dwca_common.py  test_dwca_no_pandas.py  test_dwca_no_polars.py  test_field.py  test_meta.py  test_multiple_dataset.py  test_outside_class.py  test_outside_term.py
tests/test_dwca_classes/: test_data_file.py  test_identification.py  test_outside_class.py  test_outside_class_common.py  test_outside_class_no_pandas.py  test_outside_class_no_polars.py  test_taxon.py  test_taxon_common.py  test_taxon_no_pandas.py  test_taxon_no_polars.py
tests/test_dwca_terms/: test_any_field.py  test_datetime_field.py  test_float_field.py  test_int_field.py  test_list_str_field.py  test_outside_term.py  test_record_level.py  test_str_field.py  test_taxon.py  test_union_datetime_field.py  test_union_field.py
tests/test_eml/: test_access_type.py  test_address.py  test_annotation.py  test_change_history.py  test_citation.py  test_dataset.py  test_distribution.py  test_eml.py  test_extension.py  test_extension_uri.py  test_i18n_string.py  test_individual_name.py  test_keyword_set.py  test_licence.py  test_maintenance.py  test_metadata.py  test_methods.py  test_organization_name.py  test_phone.py  test_position_name.py  test_procedure_step.py  test_protocol.py  test_research_project.py  test_responsible_party.py  test_section.py  test_semantic_annotation.py  test_software.py  test_text_type.py  test_user_id.py
tests/test_eml_coverage/: test_coverage.py  test_geo_coverage.py  test_taxa_coverage.py  test_time_coverage.py
tests/test_eml_distribution/: test_distribution.py  test_inline.py  test_offline.py  test_online.py
tests/test_metadata/: test_core.py  test_field.py  test_meta.py
tests/test_util/: test_camel_case_enum.py  test_establishment_means.py  test_format.py  test_iterate.py  test_language.py  test_pl.py  test_read_file.py  test_sql_type.py  test_unformat.py
tests/test_xml/: test_simple_xml.py  test_xml.py
(+19 files in other folders)
