[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydwca"
version = "0.0.1"
description = 'Python library to read, parse and write Darwin Core Archive files'
readme = "README.md"
requires-python = ">=3.8"
license-files = { paths = ["LICENSE"] }
keywords = []
authors = [
  { name = "Juan Saez Hidalgo", email = "jmsaez@ieb-chile.cl" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/IEB-BIODATA/pydwca#readme"
Issues = "https://github.com/IEB-BIODATA/pydwca/issues"
Source = "https://github.com/IEB-BIODATA/pydwca"

[tool.hatch.version]
path = "src/dwca/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/*"]

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/dwca tests}"

[tool.coverage.run]
source_pkgs = ["dwca", "tests"]
branch = true
parallel = true
omit = [
  "src/dwca/__about__.py",
]

[tool.coverage.paths]
dwca = ["src/dwca", "*/dwca/src/dwca"]
tests = ["tests", "*/dwca/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
